get steam id
